[gd_scene load_steps=2 format=3 uid="uid://cx3uoooetuvns"]

[ext_resource type="Script" path="res://scripts/ui/Menu.gd" id="1_voqry"]

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_voqry")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 470.0
offset_top = 60.0
offset_right = 540.0
offset_bottom = 161.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Start"

[node name="OptionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
